# mcp_pydantic_docs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  pytest.ini  test_all_tools.py  test_fresh_install.sh  test_mcp.py  validate_tools.py
data/: pydantic.jsonl  pydantic_ai.jsonl
mcp_pydantic_docs/: indexer.py  logger.py  mcp.py  normalize.py  setup.py  source_extractor.py  utils.py
tests/: conftest.py  test_admin.py  test_health.py  test_helpers.py  test_indexer.py  test_retrieval.py  test_search.py  test_source_extractor.py  test_utils.py
