[project]
name = "mcp-pydantic-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4",
  "pydantic",
  "pydantic-ai",
  "mcp[cli]",
  "markdownify>=1.2.0",
  "tiktoken>=0.12.0",
  "readability-lxml>=0.8.4.1",
  "rank-bm25>=0.2.2",
  "lxml>=4.9",
]

[project.scripts]
mcp-pydantic-docs = "mcp_pydantic_docs.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_pydantic_docs"]
