[project]
name = "mcp-pydantic-docs"
version = "0.1.0"
description = "MCP server providing local-first access to Pydantic documentation with BM25-powered full-text search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.0",
  "mcp>=1.0",
  "markdownify>=1.2.0",
  "tiktoken>=0.12.0",
  "rank-bm25>=0.2.2",
  "lxml>=4.9",
]

[project.scripts]
mcp-pydantic-docs = "mcp_pydantic_docs.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_pydantic_docs"]
